# models/Department.js
@@ -16,4 +16,4 @@ const departmentSchema = new mongoose.Schema({
   }]
 }, { timestamps: true });
 
-module.exports = mongoose.models.Department || mongoose.model('Department', departmentSchema); 
+module.exports = mongoose.models.department || mongoose.model('department', departmentSchema); 
